--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@
 .bonuspr {
   text-align: center !important;
   margin-top: 8px !important;
-  color: white !important;
+  /* color: white !important; */
   font-size: 15px !important;
   font-weight: 600 !important;
 }
